[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "essentialkit"
version = "0.6.0"
description = "A lightweight utility package to simplify common Python development tasks"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Dani Gavilán", email = "danigavipedro96@gmail.com" }
]
keywords = [
    "io",
    "utilities",
    "files",
    "json",
    "hocon",
    "logging",
    "selenium",
    "scraping"
]
dependencies = [
    "pyhocon>=0.3.60",
    "openpyxl>=3.1.5",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.2"
]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["essentialkit*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "assertpy>=1.1.0",
    "pytest-cov>=5.0.0"
]

[project.urls]
Homepage = "https://github.com/DVictorGavilan/EssentialKit"
Repository = "https://github.com/DVictorGavilan/EssentialKit"